[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Manami-GIWA <mana21parakeet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
